# Pnuemonia-Detection

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  STRUCTURE.md  cursor_clean.py  netlify.toml  notebook.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.py  setup.py  temp_end.txt  tmp_check_streamlit_context.py  tmp_streamlit_cli.py  tmp_streamlit_scriptrunner.py  tmp_streamlit_test.py  write_helpers.py
app/: app.py  config.py  helpers.py  logger.py  requirements.txt
docs/: api.md  architecture.md  deployment.md
scripts/: evaluate_model.py
tests/: __init__.py  conftest.py  test_config.py  test_model.py  test_preprocessing.py
